Bug 170968 - FILEOPEN PPTX: elements with 3D rotations don't render any longer
Summary: FILEOPEN PPTX: elements with 3D rotations don't render any longer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2026-02-22 19:48 UTC by Gerald Pfeifer
Modified: 2026-07-27 09:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (12.12 MB, application/vnd.ms-powerpoint)
2026-02-22 19:48 UTC, Gerald Pfeifer
Details
Visual comparison 24.2 (top) - 25.8 (okay, center) - 26.8 (regression, bottom) (1.81 MB, image/png)
2026-02-22 19:53 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2026-02-22 19:48:01 UTC
Created attachment 205726 [details]
Sample slide (PPTX)

The sample slide has some 3D rotations which were not applied at all
with 24.2 and look pretty fine with 25.2 to 26.2. Alas with 26.8 out of
a sudden the majority of elements is not shown at all - a bad regression.

Still good:

  Version: 25.8.6.0.0+ (X86_64) / LibreOffice Community
  Build ID: a41e93d479a487e3527cfdfea1d73e01f96e2944
  CPU threads: 14; OS: Linux 6.19; UI render: default; VCL: gtk3

  Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
  Build ID: ef56804105afce4013e8c934f39ce4edc59bcc96
  CPU threads: 14; OS: Linux 6.19; UI render: default; VCL: gtk3
  (from December due to lack of 26.2 builds)

Bad:

  Version: 26.8.0.0.alpha0+ (X86_64)
  Build ID: 96c65c2491c0e767823a972df85d2ee873cc8c65
  CPU threads: 14; OS: Linux 6.19; UI render: default; VCL: gtk3
Comment 1 Gerald Pfeifer 2026-02-22 19:53:01 UTC
Created attachment 205727 [details]
Visual comparison 24.2 (top) - 25.8 (okay, center) - 26.8 (regression, bottom)
Comment 2 m_a_riosv 2026-02-22 22:24:23 UTC
Already reproducible with
Version: 26.2.1.1 (X86_64)
Build ID: 620(Build:1)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded


Last version working on those I have installed.
Version: 25.8.5.2 (X86_64)
Build ID: 9c8b85f387cc00a89945a79c9e6239f32e450ac2
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 3 Xisco Faulí 2026-02-23 09:10:07 UTC
Regression introduced by:

commit 85dbb4dc81bed0b55a1bfbc5dce221b98eaf70d1	[log]
author	Jaume Pujantell <jaume.pujantell@collabora.com>	Tue Dec 23 09:26:12 2025 +0100
committer	Jaume Pujantell <jaume.pujantell@collabora.com>	Tue Jan 20 11:09:24 2026 +0100
tree 9fcfff89bf9c242e3a649b66bee2c9ee15a5b1e8
parent 19182801fcb67fde8b4bdd4715c2a5388681eca6 [diff]

tdf#170095 override soft edge if there are 3D effects

Bisected with: linux-64-26.8
Comment 4 Commit Notification 2026-02-25 08:11:45 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e4ef13452f3aa5494ff9babc6784155caee9e11

tdf#170968 avoid unnecessary soft edge reset

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-02-25 10:51:04 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/a57319d561c0802e667135cdd7652ad6c1016421

tdf#170968 avoid unnecessary soft edge reset

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gerald Pfeifer 2026-02-26 22:29:27 UTC
Thank you for jumping on this regression so swiftly, Jaume!

Happy to confirm this as fixed with today's daily build:

  Version: 26.8.0.0.alpha0+ (X86_64)
  Build ID: 4bf07d898cd3084ff9012f11776d1489b103236c
  CPU threads: 14; OS: Linux 6.19; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
Comment 7 m_a_riosv 2026-02-26 23:32:07 UTC
Please @jaume mark the bug as fixed.
Comment 8 Gerald Pfeifer 2026-02-27 15:02:54 UTC
 Verified per comment #6.