tdf#170968 avoid unnecessary soft edge reset

This fixes a regression from 85dbb4dc81bed0b55a1bfbc5dce221b98eaf70d1
(tdf#170095 override soft edge if there are 3D effects) where a shape
might stop showing if the soft edge value is set to zero when it wasn't
set to begin with.

Change-Id: I0a886711cef199e4eb3a89a034732e6ef0b1e4c7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200155
Reviewed-by: Jaume Pujantell <jaume.pujantell@collabora.com>
Tested-by: Jenkins